[gd_scene load_steps=5 format=3 uid="uid://bgspmxku0seet"]

[ext_resource type="Theme" uid="uid://dx4r0mviklhsx" path="res://theme/theme_1/theme_1.tres" id="1_f5p41"]
[ext_resource type="Script" path="res://Container/main_menu.gd" id="1_foau0"]
[ext_resource type="PackedScene" uid="uid://dlowwrflml6w3" path="res://Assets/Player/PlayerSpawn.tscn" id="2_uxhiw"]
[ext_resource type="AudioStream" uid="uid://cu03jlmwkqp8j" path="res://Audio/BackgroundMusic.mp3" id="3_h2upi"]

[node name="MenuMain" type="Node2D"]
script = ExtResource("1_foau0")

[node name="PlayerSpawn" parent="." instance=ExtResource("2_uxhiw")]
position = Vector2(640, 360)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 383.0
offset_top = 192.0
offset_right = 895.0
offset_bottom = 512.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f5p41")

[node name="LoginBtn" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 210.0
offset_top = 64.0
offset_right = 305.0
offset_bottom = 96.0
theme = ExtResource("1_f5p41")
theme_override_font_sizes/font_size = 14
text = "Chơi mới"

[node name="RegisterBtn" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 220.0
offset_top = 128.0
offset_right = 294.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 14
text = "Tiếp tục"

[node name="OptionBtn" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 222.0
offset_top = 192.0
offset_right = 289.0
offset_bottom = 224.0
theme = ExtResource("1_f5p41")
text = "Cài đặt"

[node name="QuitBtn" type="Button" parent="Control/Panel"]
layout_mode = 0
offset_left = 226.0
offset_top = 256.0
offset_right = 285.0
offset_bottom = 288.0
text = "Thoát"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h2upi")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(641, 360)

[connection signal="pressed" from="Control/Panel/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="Control/Panel/RegisterBtn" to="." method="_on_register_btn_pressed"]
[connection signal="pressed" from="Control/Panel/OptionBtn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="Control/Panel/QuitBtn" to="." method="_on_quit_btn_pressed"]
